WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250336
Web Inspector: WebRTC "Disable encryption" setting should be removed from remote inspection, it already isn't present for local inspection
https://bugs.webkit.org/show_bug.cgi?id=250336
Summary
Web Inspector: WebRTC "Disable encryption" setting should be removed from rem...
Patrick Angle
Reported
2023-01-09 13:10:01 PST
<
rdar://104042073
>
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2023-01-09 14:19:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8414
EWS
Comment 2
2023-01-11 14:04:38 PST
Committed
258804@main
(ad6591f07720): <
https://commits.webkit.org/258804@main
> Reviewed commits have been landed. Closing PR #8414 and removing active labels.
Karl Rackler
Comment 3
2023-01-13 12:18:01 PST
Reverted by
https://github.com/WebKit/WebKit/pull/8636
Karl Rackler
Comment 4
2023-01-13 12:18:39 PST
Reverting to test if it is the cause of 14 tests that are constant crashes.
EWS
Comment 5
2023-01-13 12:25:13 PST
Committed
258884@main
(f77f97529f2c): <
https://commits.webkit.org/258884@main
> Reviewed commits have been landed. Closing PR #8636 and removing active labels.
Karl Rackler
Comment 6
2023-01-31 16:30:34 PST
After reverting
258804@main
( revert
https://commits.webkit.org/258884@main
) the tests are all consistently passing.
Patrick Angle
Comment 7
2023-04-21 11:50:08 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/13044
EWS
Comment 8
2023-04-24 09:26:39 PDT
Committed
263316@main
(5d57d9a6c9a4): <
https://commits.webkit.org/263316@main
> Reviewed commits have been landed. Closing PR #13044 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug