Web Inspector: WebRTC "Disable encryption" setting should be removed from remote inspection, it already isn't present for local inspection https://bugs.webkit.org/show_bug.cgi?id=250336 rdar://104042073

Reviewed by Devin Rousso.

This setting already isn't present on macOS, and we already tried to remove it once earlier this year, but failed due to
what I believe to have been unrelated testing failures. We are attempting to reland it here with an update to make the
patch work with the changes to the Device menu that have since occurred.

* Source/JavaScriptCore/inspector/protocol/Page.json:
* Source/WebCore/inspector/agents/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::disable):
(WebCore::InspectorPageAgent::overrideSetting):
* Source/WebCore/page/Settings.yaml:
* Source/WebInspectorUI/UserInterface/Views/OverrideDeviceSettingsPopover.js:
(WI.OverrideDeviceSettingsPopover.prototype._createSettingsSection):

Canonical link: https://commits.webkit.org/263316@main